force-app/main/default/objects/QR_Bill_Update_Event__e/QR_Bill_Update_Event__e.object-meta.xml
<CustomObject>
    <label>QR Bill Update Event</label>
    <pluralLabel>QR Bill Update Events</pluralLabel>
</CustomObject>