force-app/main/default/objects/QR_Bill_Update_Event__e/fields/Code_result__c.field-meta.xml
<CustomField>
    <fullName>Code_result__c</fullName>
    <label>Code result</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>